fix gap

--- a/frontend/src/components/UserProfilePage/UserProfile.css
+++ b/frontend/src/components/UserProfilePage/UserProfile.css
@@ -294,7 +294,7 @@
     justify-content: center;
     margin-top: 50px;
     display: grid;
-    column-gap: 10px;
+    column-gap: 35px;
     row-gap: 10px;
     grid-template-columns: auto auto auto;
 
